<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="St_EcObject" Id="{e8f4193c-f105-49ee-89c3-bbff94900be7}">
    <Declaration><![CDATA[TYPE INTERNAL St_EcObject :
STRUCT
	iObj		: U_EcObject;
	nType		: BYTE; // 0 - Empty, 1 - Entity, 2 - Component
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>